# qaltamda_django

./: Makefile  Procfile  README.md  build.sh  expenses.csv  expenses.json  manage.py  new_expenses.csv  pyproject.toml  requirements.txt
qaltamda/: asgi.py  settings.py  urls.py  views.py  wsgi.py
qaltamda/analytics/: apps.py  test_analytics.py  urls.py  views.py
qaltamda/bot_app/: bot.py  database.py  states.py
qaltamda/bot_app/handlers/: categories.py  common.py  expenses.py  register.py  statistics.py
qaltamda/categories/: admin.py  apps.py  test_categories.py  urls.py  views.py
qaltamda/categories/migrations/: 0001_initial.py  0002_initial.py
qaltamda/core/: apps.py  mixins.py
qaltamda/expenses/: admin.py  api_views.py  apps.py  filters.py  forms.py  models.py  serializers.py  test_expenses.py  urls.py  views.py
qaltamda/expenses/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_expense_amount.py  0006_expense_deleted_expense_deleted_by_cascade_and_more.py  0007_alter_expense_section.py
qaltamda/expenses/templatetags/: expense_tags.py
qaltamda/sections/: apps.py  forms.py  models.py  test_sections.py  urls.py  views.py
qaltamda/templates/: base.html  index.html
qaltamda/users/: admin.py  apps.py  forms.py  models.py  test_users.py  urls.py  views.py
tengecash/: settings.py
tengecash/bot_app/: bot.py  database.py  loader.py  states.py
tengecash/categories/: admin.py  forms.py  models.py  views.py
tengecash/expenses/: admin.py  models.py  views.py
tengecash/templates/: base.html  index.html
(+41 files in other folders)
